
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int iPg; } ;
typedef TYPE_1__ Page ;
typedef int LsmPgno ;



LsmPgno lsmFsPageNumber(Page *pPage){

  return pPage ? pPage->iPg : 0;
}
